baml_language/crates/baml_tests/snapshots/simple_type_error/baml_tests__simple_type_error__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.Foo() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = const 1_i64 + const "foo";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
