baml_language/crates/baml_tests/snapshots/simple_type_error/baml_tests__simple_type_error__04_thir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function Foo:
    Return: Error
    Errors:
      - Invalid op Add for int and string
