baml_language/crates/baml_tests/snapshots/simple_type_error/baml_tests__simple_type_error__06_codegen.snap
---
source: target/debug/build/baml_tests-267996652c5f418c/out/generated_tests.rs
expression: output
---
=== BYTECODE ===
Functions: 1
Objects: 31
Globals: 30

Function Foo (arity: 0, kind: Bytecode):
     0   LOAD_CONST 0   (1)
     1   LOAD_CONST 1   (foo)
     2   BIN_OP +       
     3   RETURN
